# cdk

./: BATCH_MINT_NUT20_TEST_REFERENCE.md  BATCH_MINT_NUT20_TEST_STRATEGY.md  CLI_REFACTOR.md  Cargo.toml  HASHPOOL_REBASE_PLAN.md  NUT-XX_BATCHED_MINT_IMPLEMENTATION_PLAN.md  PENDING_QUOTES_QUERY_OPTIMIZATION.md  ehash_dev_plan.md  flake.nix
crates/cashu/: Cargo.toml
crates/cashu/src/nuts/: mod.rs  nut13.rs  nut19.rs  nut20.rs  nutXX.rs
crates/cdk/: Cargo.toml
crates/cdk-axum/: Cargo.toml
crates/cdk-axum/src/: hashpool_router.rs  lib.rs  router_handlers.rs
crates/cdk-cln/src/: lib.rs
crates/cdk-common/src/: common.rs  error.rs  lib.rs  mint.rs  payment.rs  subscription.rs  wallet.rs  ws.rs
crates/cdk-common/src/database/: wallet.rs
crates/cdk-ehash/: Cargo.toml  README.md
crates/cdk-ehash/src/: axum.rs  lib.rs  mint.rs  payment.rs  types.rs  wallet.rs
crates/cdk-ffi/src/: database.rs  postgres.rs  sqlite.rs  types.rs
crates/cdk-ffi/src/types/: mint.rs  quote.rs  subscription.rs
crates/cdk-integration-tests/: Cargo.toml
crates/cdk-integration-tests/src/: init_pure_tests.rs  lib.rs
crates/cdk-integration-tests/tests/: batch_mint.rs  ehash_integration.rs  fake_auth.rs  hashpool_quote_lookup.rs  integration_tests_pure.rs  mint.rs
crates/cdk-mint-rpc/src/proto/: server.rs
crates/cdk-mintd/: Cargo.toml
crates/cdk-mintd/src/: config.rs  lib.rs
crates/cdk-redb/src/: migrations.rs
crates/cdk-signatory/src/: signatory.rs
crates/cdk-sql-common/: build.rs
crates/cdk/src/: hashpool.rs  lib.rs
crates/cdk/tests/: wallet_batch_mint.rs
(+54 files in other folders)
