[package]
name = "cdk-ehash"
version.workspace = true
edition.workspace = true
authors = ["CDK Developers"]
license.workspace = true
homepage = "https://github.com/cashubtc/cdk"
repository = "https://github.com/cashubtc/cdk.git"
rust-version.workspace = true
readme = "README.md"
description = "CDK ehash helpers"

[dependencies]
axum.workspace = true
bitcoin.workspace = true
cdk = { workspace = true, features = ["mint"] }
cdk-common = { workspace = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
serde_json.workspace = true

[features]
wallet = ["cdk/wallet"]
