[package]
name = "cdk-ehash"
version.workspace = true
edition.workspace = true
authors = ["CDK Developers"]
license.workspace = true
homepage = "https://github.com/cashubtc/cdk"
repository = "https://github.com/cashubtc/cdk.git"
rust-version.workspace = true
description = "CDK ehash payment processor for Hashpool mining share rewards"
readme = "README.md"

[dependencies]
async-trait.workspace = true
cdk-common = { workspace = true, features = ["mint"] }
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
tokio-stream.workspace = true
tokio-util.workspace = true
tracing.workspace = true

[lints]
workspace = true
